discussion/kv_engine/175891/175891_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Use proper singleton for ScamShaFallbackSalt

Change-Id: Iba799518898a6387885c43e621ea85c53da59324

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-08 13:33:45.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-08 14:00:08.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17997/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:147:9: error: use of undeclared identifier "fallback" [clang-diagnostic-error]
        fallback.swap(decoded);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:151:17: error: use of undeclared identifier "fallback" [clang-diagnostic-error]
        return *fallback.rlock();
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:156:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::string> fallback;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17997/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:147:9:
error: use of undeclared identifier "fallback" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17997/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39237/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cbsasl/user.cc:156:5:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7655/ : FAILURE

Compile error at [2022-06-08T13:35:01.463Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/user.cc:156:5:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7655/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17056/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46685/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19033/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19839/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20837/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28228/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7759/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
